--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@
 	color: aliceblue;
 }
 
-.text{
+/* 背景图片 */
+.text,.hello,#footer{
 	position: relative;
 	background-image: url(../imgs/main.jpg);
 	background-repeat: no-repeat;
@@ -43,4 +44,49 @@
 	height: 100px;
 	background-color: #666;
 	float: right;
+}
+
+#hello{
+	position: absolute;
+	top: 25%;
+	left: 30%;
+	height: 40%;
+	width: 40%;
+	text-align: center;
+	font-size: 200px;
+	
+	line-height: 1.4em;
+}
+
+#hello p{
+	font-size: 100px;
+	line-height: 0px;
+}
+
+/* #jibenxinxi,#jiaoyubeijing,#xiaoyuanjingli,
+#shixijingli,#jinengzhengshu,#ziwopingjia{
+	height: 60%;
+} */
+
+.neirong{
+	/* csdn 模糊 */
+	/* border-bottom: 1px solid;
+	border-bottom-color: #ccc;
+	border-bottom-color: rgba(255, 255, 255, 0.2); */
+	background-color: rgba(255, 255, 255, 0.4);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#jibenxinxi{
+	position: absolute;
+	width: 70%;
+	height: 70%;
+	top: 15%;
+	left: 15%;
+}
+
+table td{
+	color: black;
+	font-size: 25px;
+	height: 80px;
 }
